Add a Impact class which acts as the state manager, and passes calls from the main loop to the various functions to the currently running state.

--- a/src/lib/core/CMakeLists.txt
+++ b/src/lib/core/CMakeLists.txt
@@ -8,6 +8,7 @@
 SET(CURDIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(CORE_SOURCES
    "${CURDIR}/impact_init.cc"
+   "${CURDIR}/impact_game.cc"
    PARENT_SCOPE)
 
 
