Add the input module of the base state, each state is split up into different modules, with core containing the base state, and it consisting of a display, logic, input, and sound module, each having different duties to perform. This one has some defined functions, as most, if not all, of the states, will have the same input handling, which just sets flags in a bitset variable, showing which buttons are pressed.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -8,10 +8,12 @@
 ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(display)
 ADD_SUBDIRECTORY(sound)
+ADD_SUBDIRECTORY(input)
 
 # Set source variable to build main.cc in /src/bin
 SET(LIB_SOURCES
    ${CORE_SOURCES}
    ${DISPLAY_SOURCES}
    ${SOUND_SOURCES}
+   ${INPUT_SOURCES}
    PARENT_SCOPE)
