Add the display module for the play state.
Currently it is just a bear bones implementation, which just returns
RETURN_NORMAL for each one, but eventually it will hold the variables for the
image data, and handle drawing of the display.

--- a/src/lib/display/CMakeLists.txt
+++ b/src/lib/display/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(CURDIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(DISPLAY_SOURCES
    "${CURDIR}/display_init.cc"
    "${CURDIR}/display_state.cc"
+   "${CURDIR}/display_state_play.cc"
    PARENT_SCOPE)
 
 
