Add the sound module skeleton for the Play state.
Currently it is just a bare bones implementation, but eventually will hold all
sound data and handle sound playback for the game.

--- a/src/lib/sound/CMakeLists.txt
+++ b/src/lib/sound/CMakeLists.txt
@@ -8,4 +8,5 @@
 SET(CURDIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(SOUND_SOURCES
    "${CURDIR}/sound_init.cc"
+   "${CURDIR}/sound_state_play.cc"
    PARENT_SCOPE)
