Add the skeleton of the logic module of the Play state.
Currently a bare bones implementation, but eventually it will handle all input,
collision detection, movement, AI, and everything else that affects how the
game behaves and operates. This will likely be the most complicated module,
containing all the logic needed to run the game.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(display)
 ADD_SUBDIRECTORY(sound)
 ADD_SUBDIRECTORY(input)
+ADD_SUBDIRECTORY(logic)
 
 # Set source variable to build main.cc in /src/bin
 SET(LIB_SOURCES
@@ -16,4 +17,5 @@ SET(LIB_SOURCES
    ${DISPLAY_SOURCES}
    ${SOUND_SOURCES}
    ${INPUT_SOURCES}
+   ${LOGIC_SOURCES}
    PARENT_SCOPE)
