Add the ImpactPlay class, the Play state core module.
This class currently does nothing but returning RETURN_NORMAL for each function
passed in from the Impact class, except for input, in order to make closing of
the window possible. This class is what is run via the state manager, and
contains the other modules within it.

--- a/src/lib/core/CMakeLists.txt
+++ b/src/lib/core/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(CURDIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(CORE_SOURCES
    "${CURDIR}/impact_init.cc"
    "${CURDIR}/impact_game.cc"
+   "${CURDIR}/impact_state_play.cc"
    "${CURDIR}/timer.cc"
    PARENT_SCOPE)
 
