--- a/src/lib/libs/CMakeLists.txt
+++ b/src/lib/libs/CMakeLists.txt
@@ -5,7 +5,9 @@
 # @date 2012-02-02
 
 # Add library subdirectories to the build system
+ADD_SUBDIRECTORY(jansson)
 
 # Set variable to add files to build process
 SET(LIBS_SOURCES
+   ${JANSSON_SOURCES}
    PARENT_SCOPE)
