Move impact binary to root of build directory.
Before this, due to the way that I had the cmake files set up, it would put the
impact binary to src/bin of the build directory, which made it slightly harder
to access, and made testing just a little more cumbersome. So now it will put
it into the root.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ PROJECT(IMPACT)
 # Version Information and other configuration settings
 SET(Impact_VERSION_MAJOR 0)
 SET(Impact_VERSION_MINOR 1)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
 # Find the prerequisite libraries
 FIND_PACKAGE(SDL REQUIRED)
