Enable the data directory to be parsed by CMake.
The data/ directory now gets parsed by CMake, which will automatically copy
over the files located within the CMakeLists.txt files in each folder into the
data directory within the build tree, to enable ease of launching impact after
building.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ endif (NOT SDLIMAGE_FOUND)
 
 # Include subdirectories in the tree for build process
 ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(data)
