Add install capability to CMake.
CMake can now install the files using make install on linux, and possibly other
platforms. The default installation directory is the install directory within
the directory that you build the project. Also data files should automatically
be installed as well, if you have the submodule checked out. You can change the
default install prefix by passing -DCMAKE_INSTALL_PREFIX=/foo, only cavaet is
that currently, Impact needs the data files to be in the same directory that
the binary is installed in. I'll probably get around to changing it to be able
to be loaded from any directory, but that is the way it works for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,15 @@ PROJECT(IMPACT)
 # Version Information and other configuration settings
 SET(Impact_VERSION_MAJOR 0)
 SET(Impact_VERSION_MINOR 1)
+
+# Set impact binary to be in build root 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
+# Set default install prefix if there isn't one set
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+   SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/install" CACHE PATH
+   "Impact Install Prefix" FORCE)
+endif (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 # Find the prerequisite libraries
 FIND_PACKAGE(SDL REQUIRED)
