Add the LZ4 library to handle compression.
The json files will be, at build time, compressed using the lz4comp program,
which will compress it using the LZ4 algorithm, to help speed up loading time.

--- a/src/lib/libs/CMakeLists.txt
+++ b/src/lib/libs/CMakeLists.txt
@@ -6,8 +6,10 @@
 
 # Add library subdirectories to the build system
 ADD_SUBDIRECTORY(jansson)
+ADD_SUBDIRECTORY(lz4)
 
 # Set variable to add files to build process
 SET(LIBS_SOURCES
    ${JANSSON_SOURCES}
+   ${LZFOUR_SOURCES}
    PARENT_SCOPE)
