--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -27,17 +27,8 @@ ADD_EXECUTABLE(
    WIN32
    MACOSX_BUNDLE
    lz4comp.cc
-   "${CMAKE_SOURCE_DIR}/src/lib/core/impact_io.cc"
+   "${CMAKE_SOURCE_DIR}/src/lib/core/impact_io_lz4.cc"
    "${CMAKE_SOURCE_DIR}/src/lib/libs/lz4/lz4.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/dump.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/error.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/hashtable.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/load.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/memory.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/strbuffer.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/strconv.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/utf.c"
-   "${CMAKE_SOURCE_DIR}/src/lib/libs/jansson/value.c"
 )
 
 INSTALL (TARGETS impact DESTINATION ${CMAKE_INSTALL_PREFIX})
