Include new config module for Impact
Include a new folder and CMakeLists.txt file for a new module of classes, which
will primarily be focused on handling the reading and writing of various forms
of textual data, and importing that data into the game itself. This data is
things such as a global configuration, tilesets, chapters, games, animation,
etc. To start off with, I'll be working on a global configuration file, which
gets written to data/config.json, which will have names for each of the
different folders, such as for images or sounds or whatever.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_SUBDIRECTORY(sound)
 ADD_SUBDIRECTORY(input)
 ADD_SUBDIRECTORY(logic)
 ADD_SUBDIRECTORY(libs)
+ADD_SUBDIRECTORY(config)
 
 # Set source variable to build main.cc in /src/bin
 SET(LIB_SOURCES
@@ -20,4 +21,5 @@ SET(LIB_SOURCES
    ${INPUT_SOURCES}
    ${LOGIC_SOURCES}
    ${LIBS_SOURCES}
+   ${CONFIG_SOURCES}
    PARENT_SCOPE)
