Move utility classes to their own folder
As I begin developing the game more, I am noticing that my core module is
getting cluttered up with files that aren't specifically part of the core
functionalities, but are more utility types of classes, such as the timer or
data storage types. So I have moved these to their own folder under the src/lib
directory.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -5,6 +5,7 @@
 # @date 2012-01-28
 
 # Include subdirectories in the tree for build process
+ADD_SUBDIRECTORY(util)
 ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(display)
 ADD_SUBDIRECTORY(sound)
@@ -15,6 +16,7 @@ ADD_SUBDIRECTORY(config)
 
 # Set source variable to build main.cc in /src/bin
 SET(LIB_SOURCES
+   ${UTIL_SOURCES}
    ${CORE_SOURCES}
    ${DISPLAY_SOURCES}
    ${SOUND_SOURCES}
