Fix cross compilation with lz4comp native build
As mentioned within the commit within the data repository, this is a slight
change to the build process, creating a cmake cache file for use in any cross
compiling that needs to take place, which points to the location of the lz4comp
file for the data file compression process. Due to some issues with the way
that it worked, lz4comp now gets placed within the root of the build directory,
rather than within the data directory, the build process still works the same
though, so it's mostly a cosmetic change.

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -23,7 +23,7 @@ ADD_EXECUTABLE(
 
 # Build the lz4comp executable
 ADD_EXECUTABLE(
-   data/lz4comp
+   lz4comp
    WIN32
    MACOSX_BUNDLE
    lz4comp.cc
@@ -31,4 +31,11 @@ ADD_EXECUTABLE(
    "${CMAKE_SOURCE_DIR}/src/lib/libs/lz4/lz4.c"
 )
 
+# Set a cache file for lz4comp for cross compiling build
+if (NOT CMAKE_CROSSCOMPILING)
+   EXPORT(TARGETS lz4comp FILE
+   "${CMAKE_BINARY_DIR}/lz4comp_crossfile.cmake" NAMESPACE native-)
+endif (NOT CMAKE_CROSSCOMPILING)
+
 INSTALL (TARGETS impact DESTINATION ${CMAKE_INSTALL_PREFIX})
+INSTALL (TARGETS lz4comp DESTINATION ${CMAKE_INSTALL_PREFIX})
